Update bridge logo on all remaining pages across entire site

--- a/index-new.html
+++ b/index-new.html
@@ -694,7 +694,7 @@
 <body>
     <nav>
         <div class="nav-inner">
-            <a href="#" class="logo">AIBridges</a>
+            <a href="/" class="logo"><img src="/logo-bridge-dark.svg" alt="" style="width:64px;height:64px;vertical-align:middle;margin-right:8px;">AIBridges</a>
             <ul class="nav-links">
                 <li><a href="#services">Services</a></li>
                 <li><a href="#products">Products</a></li>
