--- a/sell-your-home.html
+++ b/sell-your-home.html
@@ -216,7 +216,7 @@
 <body>
     <nav>
         <div class="nav-container">
-            <a href="https://aibridges.org" class="logo">AIBridges</a>
+            <a href="https://aibridges.org" class="logo"><img src="/logo-bridge-dark.svg" alt="" style="width:64px;height:64px;vertical-align:middle;margin-right:8px;">AIBridges</a>
             <ul class="nav-links">
                 <li><a href="ri-report">RI Real Estate</a></li>
                 <li><a href="https://aibridges.org/#contact" class="nav-cta">Contact</a></li>
