Update remaining logos: service pages, footer logos, ad images, library nav

--- a/casevault-contribute.html
+++ b/casevault-contribute.html
@@ -72,7 +72,7 @@
             <a href="casevault-calculator.html">Calculator</a>
             <a href="casevault-dashboard.html">Dashboard</a>
             <a href="casevault-contribute.html" class="active">Contribute</a>
-            <a href="/">AIBridges</a>
+            <a href="/"><img src="/logo-bridge-dark.svg" alt="" style="width:32px;height:32px;vertical-align:middle;margin-right:6px;">AIBridges</a>
         </div>
     </nav>
 
