--- a/casevault-intake.html
+++ b/casevault-intake.html
@@ -91,7 +91,7 @@
         <div class="nav-links">
             <a href="casevault-calculator.html">Calculator</a>
             <a href="casevault-dashboard.html">Dashboard</a>
-            <a href="/">AIBridges</a>
+            <a href="/"><img src="/logo-bridge-dark.svg" alt="" style="width:32px;height:32px;vertical-align:middle;margin-right:6px;">AIBridges</a>
         </div>
     </nav>
 
@@ -265,7 +265,7 @@
     </div>
 
     <footer class="footer">
-        <p>© 2026 CaseVault by <a href="/">AIBridges</a> | Cranston, RI</p>
+        <p>© 2026 CaseVault by <a href="/"><img src="/logo-bridge-dark.svg" alt="" style="width:32px;height:32px;vertical-align:middle;margin-right:6px;">AIBridges</a> | Cranston, RI</p>
         <p style="margin-top: 8px;">Settlement data is anonymized. Not legal advice.</p>
     </footer>
 
