--- a/ri-law-search.html
+++ b/ri-law-search.html
@@ -460,7 +460,7 @@
 <body>
     <nav class="site-nav">
         <a href="/" class="logo">
-            <img src="/ad-images/logo-white.svg" alt="AIBridges">
+            <img src="/logo-bridge-white.svg" alt="AIBridges" style="width:64px;height:64px;">
             AIBridges
         </a>
         <div class="nav-links">
