--- a/contact.html
+++ b/contact.html
@@ -577,7 +577,7 @@
     <!-- Footer -->
     <footer>
         <div class="footer-content">
-            <div class="footer-logo">AIBridges</div>
+            <div class="footer-logo"><img src="/logo-bridge-white.svg" alt="" style="width:40px;height:40px;vertical-align:middle;margin-right:8px;">AIBridges</div>
             <div class="footer-links">
                 <a href="index.html">Home</a>
                 <a href="index.html#services">Services</a>
