--- a/index-backup.html
+++ b/index-backup.html
@@ -3063,7 +3063,7 @@
     <!-- Navigation -->
     <nav id="navbar" role="navigation" aria-label="Main navigation">
         <div class="nav-container">
-            <a href="#hero" class="logo" aria-label="AIBridges - Back to top">AIBridges</a>
+            <a href="#hero" class="logo" aria-label="AIBridges - Back to top"><img src="/logo-bridge-white.svg" alt="" style="width:64px;height:64px;vertical-align:middle;margin-right:8px;">AIBridges</a>
             <ul class="nav-links" role="menubar">
                 <li><a href="#services" data-nav>Services</a></li>
                 <li><a href="#products" data-nav>Products</a></li>
