--- a/service-backups.html
+++ b/service-backups.html
@@ -18,7 +18,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0">
         <a href="/" class="navbar-brand p-0">
-            <h1 class="text-primary"><i class="fas fa-robot me-3"></i>AIBridges</h1>
+            <h1 class="text-primary"><img src="/logo-bridge-dark.svg" alt="" style="width:48px;height:48px;vertical-align:middle;margin-right:12px;">AIBridges</h1>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="fa fa-bars"></span>
