--- a/service-security.html
+++ b/service-security.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0">
-        <a href="/" class="navbar-brand p-0"><h1 class="text-primary"><i class="fas fa-robot me-3"></i>AIBridges</h1></a>
+        <a href="/" class="navbar-brand p-0"><h1 class="text-primary"><img src="/logo-bridge-dark.svg" alt="" style="width:48px;height:48px;vertical-align:middle;margin-right:12px;">AIBridges</h1></a>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto py-0">
                 <a href="/" class="nav-item nav-link">Home</a>
