Fix blog: white logo on dark page + add 6 missing blog posts

--- a/blog.html
+++ b/blog.html
@@ -460,7 +460,7 @@
     <!-- Navigation -->
     <nav>
         <div class="nav-container">
-            <a href="index.html" class="logo"><img src="/logo-bridge.svg" alt="" style="width:64px;height:64px;vertical-align:middle;margin-right:8px;">AIBridges</a>
+            <a href="index.html" class="logo"><img src="/logo-bridge-white.svg" alt="" style="width:64px;height:64px;vertical-align:middle;margin-right:8px;">AIBridges</a>
             <ul class="nav-links">
                 <li><a href="index.html#services">Services</a></li>
                 <li><a href="index.html#products">Products</a></li>
@@ -486,6 +486,114 @@
     <!-- Blog Grid -->
     <section class="blog-section">
         <div class="blog-grid">
+            <!-- Blog Card - RI AI Task Force -->
+            <article class="blog-card">
+                <div class="blog-card-image">
+                    <i class="fas fa-landmark"></i>
+                </div>
+                <div class="blog-card-content">
+                    <div class="blog-card-meta">
+                        <span><i class="far fa-calendar"></i> Feb 21, 2026</span>
+                        <span class="blog-card-category">AI Policy</span>
+                    </div>
+                    <h2>Rhode Island AI Task Force: What Small Businesses Need to Know</h2>
+                    <p>The RI AI Task Force is shaping how AI will be regulated in our state. Here's what local businesses should know and how to prepare.</p>
+                    <a href="blog-ri-ai-task-force" class="blog-card-link">
+                        Read More <i class="fas fa-arrow-right"></i>
+                    </a>
+                </div>
+            </article>
+
+            <!-- Blog Card - RI Innovation Voucher -->
+            <article class="blog-card">
+                <div class="blog-card-image">
+                    <i class="fas fa-money-bill-wave"></i>
+                </div>
+                <div class="blog-card-content">
+                    <div class="blog-card-meta">
+                        <span><i class="far fa-calendar"></i> Feb 20, 2026</span>
+                        <span class="blog-card-category">Funding</span>
+                    </div>
+                    <h2>How to Get Rhode Island to Pay for Your AI Implementation</h2>
+                    <p>The RI Innovation Voucher program can fund up to $50,000 of your AI project. Learn how to apply and maximize your chances.</p>
+                    <a href="blog-ri-innovation-voucher-ai" class="blog-card-link">
+                        Read More <i class="fas fa-arrow-right"></i>
+                    </a>
+                </div>
+            </article>
+
+            <!-- Blog Card - Best Realtor AI Tools 2026 -->
+            <article class="blog-card">
+                <div class="blog-card-image">
+                    <i class="fas fa-home"></i>
+                </div>
+                <div class="blog-card-content">
+                    <div class="blog-card-meta">
+                        <span><i class="far fa-calendar"></i> Feb 18, 2026</span>
+                        <span class="blog-card-category">Real Estate</span>
+                    </div>
+                    <h2>Best Realtor AI Tools 2026: Complete Guide</h2>
+                    <p>The top AI tools transforming real estate in 2026. From lead generation to virtual staging, see what's working for top agents.</p>
+                    <a href="blog-best-realtor-ai-tools-2026" class="blog-card-link">
+                        Read More <i class="fas fa-arrow-right"></i>
+                    </a>
+                </div>
+            </article>
+
+            <!-- Blog Card - AI for RI Real Estate Agents -->
+            <article class="blog-card">
+                <div class="blog-card-image">
+                    <i class="fas fa-robot"></i>
+                </div>
+                <div class="blog-card-content">
+                    <div class="blog-card-meta">
+                        <span><i class="far fa-calendar"></i> Feb 15, 2026</span>
+                        <span class="blog-card-category">Real Estate</span>
+                    </div>
+                    <h2>AI for Rhode Island Real Estate Agents</h2>
+                    <p>How RI realtors are using AI to close more deals, respond faster, and stand out in competitive markets like Providence and Newport.</p>
+                    <a href="blog-ai-real-estate-agents-rhode-island" class="blog-card-link">
+                        Read More <i class="fas fa-arrow-right"></i>
+                    </a>
+                </div>
+            </article>
+
+            <!-- Blog Card - RI Real Estate Chatbot -->
+            <article class="blog-card">
+                <div class="blog-card-image">
+                    <i class="fas fa-comments"></i>
+                </div>
+                <div class="blog-card-content">
+                    <div class="blog-card-meta">
+                        <span><i class="far fa-calendar"></i> Feb 14, 2026</span>
+                        <span class="blog-card-category">Real Estate</span>
+                    </div>
+                    <h2>RI Real Estate Chatbot for Customer Inquiries</h2>
+                    <p>24/7 AI lead response for Rhode Island realtors. Never miss a lead again with intelligent chatbots that qualify and schedule.</p>
+                    <a href="blog-ri-real-estate-chatbot-customer-inquiries" class="blog-card-link">
+                        Read More <i class="fas fa-arrow-right"></i>
+                    </a>
+                </div>
+            </article>
+
+            <!-- Blog Card - Local Tech Support Providence -->
+            <article class="blog-card">
+                <div class="blog-card-image">
+                    <i class="fas fa-headset"></i>
+                </div>
+                <div class="blog-card-content">
+                    <div class="blog-card-meta">
+                        <span><i class="far fa-calendar"></i> Feb 12, 2026</span>
+                        <span class="blog-card-category">IT Support</span>
+                    </div>
+                    <h2>How to Choose Local Tech Support in Providence RI</h2>
+                    <p>What to look for in a Providence IT support partner. Response times, pricing models, and red flags to avoid.</p>
+                    <a href="blog-local-tech-support-providence" class="blog-card-link">
+                        Read More <i class="fas fa-arrow-right"></i>
+                    </a>
+                </div>
+            </article>
+
             <!-- Blog Card - MA Car Accident Settlements -->
             <article class="blog-card">
                 <div class="blog-card-image">
