Add honest positioning: Fast AI (Gemini) for realtors, not premium

--- a/realtors-ai.html
+++ b/realtors-ai.html
@@ -740,6 +740,9 @@
         <div class="price-box">
             <div class="price-main">$400</div>
             <div class="price-sub">one-time setup + $99/mo</div>
+            <p style="font-size: 0.75rem; color: #888; margin: 0.5rem 0 1rem; padding: 0.5rem; background: #111; border-radius: 6px;">
+                ⚡ <strong>Fast AI</strong> — Powered by Gemini 2.0 Flash. Great for quick responses & routine questions. For complex legal/financial analysis, we recommend direct consultation.
+            </p>
             <ul class="price-list">
                 <li>AI trained on your voice and style</li>
                 <li>36,000+ RI property knowledge base</li>
@@ -781,6 +784,10 @@
             <div class="faq-item">
                 <div class="faq-q">How do I get started with AI for my real estate business?</div>
                 <div class="faq-a">Setup takes about a week. We train the AI on your communication style, connect it to your calendar and phone, and integrate your property knowledge base. You get instant lead response from day one.</div>
+            </div>
+            <div class="faq-item">
+                <div class="faq-q">What type of AI is this? Is it as smart as ChatGPT?</div>
+                <div class="faq-a">This service uses Gemini 2.0 Flash — a fast, efficient AI optimized for quick responses and routine real estate questions. It's excellent for 90% of client inquiries (comps, property info, scheduling). For highly complex legal, financial, or negotiation advice, we always recommend consulting directly with appropriate professionals. The trade-off: you get an affordable AI that handles the volume, not a premium AI that costs 20x more.</div>
             </div>
         </div>
     </section>
