Update realtor blog posts: honest Fast AI (Gemini) positioning

--- a/blog-ai-real-estate-agents-rhode-island.html
+++ b/blog-ai-real-estate-agents-rhode-island.html
@@ -136,14 +136,23 @@
                 <li><strong>Monitor and improve:</strong> Review AI conversations and tune the responses.</li>
             </ol>
 
+            <h2>Fast AI vs Premium AI: Know the Difference</h2>
+            <p>Not all AI is created equal. There's a spectrum:</p>
+            <ul>
+                <li><strong>Premium AI (Claude, GPT-4):</strong> Best for complex analysis, nuanced negotiations, detailed market reports. Costs $15-20+ per 1M tokens.</li>
+                <li><strong>Fast AI (Gemini Flash):</strong> Great for quick responses, routine questions, lead qualification, scheduling. Costs ~$0.50 per 1M tokens.</li>
+            </ul>
+            <p>For most realtor tasks—responding to leads, answering property questions, scheduling showings—<strong>Fast AI is plenty good enough</strong> and costs 30-40x less.</p>
+            <p>Our RI Realtor AI uses Gemini 2.0 Flash because we believe in honest value: you shouldn't pay premium AI prices for routine tasks. For complex legal, financial, or negotiation advice, we always recommend consulting with appropriate professionals directly.</p>
+
             <h2>The Bottom Line</h2>
             <p>AI won't replace realtors. But realtors who use AI will replace realtors who don't.</p>
             
             <p>In Rhode Island's competitive market, response time and availability matter. AI gives you both, 24/7.</p>
 
             <div class="cta-box">
-                <h3 style="color: #fff; margin: 0 0 1rem;">Want AI Built for RI Real Estate?</h3>
-                <p style="color: #aaa; margin-bottom: 1.5rem;">See how our realtor AI handles leads, schedules showings, and answers property questions.</p>
+                <h3 style="color: #fff; margin: 0 0 1rem;">Fast, Affordable AI for RI Realtors</h3>
+                <p style="color: #aaa; margin-bottom: 1.5rem;">Powered by Gemini 2.0 Flash. Great for lead response, property questions, and scheduling. Honest pricing, no premium markup.</p>
                 <a href="/realtors-ai" class="btn btn-primary">See Demo →</a>
             </div>
         </article>
