--- a/blog-best-realtor-ai-tools-2026.html
+++ b/blog-best-realtor-ai-tools-2026.html
@@ -140,14 +140,22 @@
                 <li><strong>Transaction coordination:</strong> AI that helps manage deals, not just leads</li>
             </ul>
 
+            <h2>Premium vs Fast AI: Choose Wisely</h2>
+            <p>Here's something most AI vendors won't tell you: you probably don't need premium AI for most realtor tasks.</p>
+            <ul>
+                <li><strong>Premium AI (GPT-4, Claude):</strong> Great for complex analysis, but costs $15-20+ per million tokens</li>
+                <li><strong>Fast AI (Gemini Flash):</strong> Handles 90% of routine tasks at ~$0.50 per million tokens</li>
+            </ul>
+            <p>For lead response, scheduling, and property questions, Fast AI is plenty capable and 30-40x cheaper.</p>
+
             <h2>Our Recommendation</h2>
-            <p>If you're a Rhode Island realtor, we built <a href="/realtors-ai">AIBridges Realtor Assistant</a> specifically for this market. It knows Providence neighborhoods, RI property taxes, local schools—things national tools miss.</p>
+            <p>If you're a Rhode Island realtor, we built <a href="/realtors-ai">AIBridges Realtor Assistant</a> specifically for this market. It uses Gemini 2.0 Flash—fast, affordable AI that knows Providence neighborhoods, RI property taxes, and local schools.</p>
             
-            <p>For agents outside RI, Structurely offers the best balance of features and price for most teams.</p>
+            <p>We're honest about what it is: Fast AI for routine tasks, not premium AI pretending to be more than it is. For complex legal or financial decisions, consult the appropriate professionals.</p>
 
             <div class="cta-box">
-                <h3 style="color: #fff; margin: 0 0 1rem;">Want AI That Knows Rhode Island?</h3>
-                <p style="color: #aaa; margin-bottom: 1.5rem;">Our realtor AI is trained on 36,000+ RI properties. See a demo.</p>
+                <h3 style="color: #fff; margin: 0 0 1rem;">Fast, Affordable AI for RI Realtors</h3>
+                <p style="color: #aaa; margin-bottom: 1.5rem;">Powered by Gemini 2.0 Flash. 36,000+ RI properties. Honest pricing.</p>
                 <a href="/realtors-ai" class="btn btn-primary">See Realtor AI Demo →</a>
             </div>
         </article>
