--- a/blog-ri-real-estate-chatbot-customer-inquiries.html
+++ b/blog-ri-real-estate-chatbot-customer-inquiries.html
@@ -171,9 +171,13 @@
             </ol>
             <p>Most agents are fully operational within a week.</p>
 
+            <h2>Fast AI, Honest Pricing</h2>
+            <p>Our chatbot uses <strong>Gemini 2.0 Flash</strong>—a fast, efficient AI model that's perfect for routine realtor tasks. It costs us ~$0.50 per million tokens vs $15-20 for premium AI like GPT-4.</p>
+            <p>What does that mean for you? Affordable pricing without sacrificing speed. The chatbot handles 90% of routine inquiries flawlessly. For complex legal or financial questions, it politely suggests consulting with appropriate professionals—because we believe in being honest about what AI can and can't do.</p>
+
             <div class="cta-box">
-                <h3 style="color: #fff; margin: 0 0 1rem;">Ready to Handle Inquiries 24/7?</h3>
-                <p style="color: #aaa; margin-bottom: 1.5rem;">See how our RI real estate chatbot handles customer questions, qualifies leads, and books showings automatically.</p>
+                <h3 style="color: #fff; margin: 0 0 1rem;">Fast, Affordable 24/7 Lead Response</h3>
+                <p style="color: #aaa; margin-bottom: 1.5rem;">Powered by Gemini 2.0 Flash. Handles routine questions, qualifies leads, books showings. Honest about its capabilities.</p>
                 <a href="/realtors-ai" class="btn btn-primary">See Live Demo →</a>
             </div>
         </article>
