Remove specific token costs from blog posts - just say affordable

--- a/blog-ai-real-estate-agents-rhode-island.html
+++ b/blog-ai-real-estate-agents-rhode-island.html
@@ -139,8 +139,8 @@
             <h2>Fast AI vs Premium AI: Know the Difference</h2>
             <p>Not all AI is created equal. There's a spectrum:</p>
             <ul>
-                <li><strong>Premium AI (Claude, GPT-4):</strong> Best for complex analysis, nuanced negotiations, detailed market reports. Costs $15-20+ per 1M tokens.</li>
-                <li><strong>Fast AI (Gemini Flash):</strong> Great for quick responses, routine questions, lead qualification, scheduling. Costs ~$0.50 per 1M tokens.</li>
+                <li><strong>Premium AI (Claude, GPT-4):</strong> Best for complex analysis, nuanced negotiations, detailed market reports. Significantly more expensive.</li>
+                <li><strong>Fast AI (Gemini Flash):</strong> Great for quick responses, routine questions, lead qualification, scheduling. Much more affordable.</li>
             </ul>
             <p>For most realtor tasks—responding to leads, answering property questions, scheduling showings—<strong>Fast AI is plenty good enough</strong> and costs 30-40x less.</p>
             <p>Our RI Realtor AI uses Gemini 2.0 Flash because we believe in honest value: you shouldn't pay premium AI prices for routine tasks. For complex legal, financial, or negotiation advice, we always recommend consulting with appropriate professionals directly.</p>
