--- a/blog-best-realtor-ai-tools-2026.html
+++ b/blog-best-realtor-ai-tools-2026.html
@@ -143,8 +143,8 @@
             <h2>Premium vs Fast AI: Choose Wisely</h2>
             <p>Here's something most AI vendors won't tell you: you probably don't need premium AI for most realtor tasks.</p>
             <ul>
-                <li><strong>Premium AI (GPT-4, Claude):</strong> Great for complex analysis, but costs $15-20+ per million tokens</li>
-                <li><strong>Fast AI (Gemini Flash):</strong> Handles 90% of routine tasks at ~$0.50 per million tokens</li>
+                <li><strong>Premium AI (GPT-4, Claude):</strong> Best for complex analysis, but significantly more expensive</li>
+                <li><strong>Fast AI (Gemini Flash):</strong> Handles 90% of routine tasks at a fraction of the cost</li>
             </ul>
             <p>For lead response, scheduling, and property questions, Fast AI is plenty capable and 30-40x cheaper.</p>
 
