--- a/blog-ri-real-estate-chatbot-customer-inquiries.html
+++ b/blog-ri-real-estate-chatbot-customer-inquiries.html
@@ -172,7 +172,7 @@
             <p>Most agents are fully operational within a week.</p>
 
             <h2>Fast AI, Honest Pricing</h2>
-            <p>Our chatbot uses <strong>Gemini 2.0 Flash</strong>—a fast, efficient AI model that's perfect for routine realtor tasks. It costs us ~$0.50 per million tokens vs $15-20 for premium AI like GPT-4.</p>
+            <p>Our chatbot uses <strong>Gemini 2.0 Flash</strong>—a fast, efficient AI model that's perfect for routine realtor tasks. It's significantly more affordable than premium AI like GPT-4, and we pass those savings on to you.</p>
             <p>What does that mean for you? Affordable pricing without sacrificing speed. The chatbot handles 90% of routine inquiries flawlessly. For complex legal or financial questions, it politely suggests consulting with appropriate professionals—because we believe in being honest about what AI can and can't do.</p>
 
             <div class="cta-box">
