Fix summary text contrast - dark text on light background

--- a/ri-law-search.html
+++ b/ri-law-search.html
@@ -322,25 +322,26 @@
             margin-top: 16px;
         }
         .summary-box {
-            background: linear-gradient(135deg, rgba(0,212,255,0.1), rgba(0,212,255,0.05));
-            border: 1px solid rgba(0,212,255,0.3);
+            background: linear-gradient(135deg, rgba(0,100,150,0.1), rgba(0,100,150,0.05));
+            border: 1px solid rgba(0,100,150,0.3);
             border-radius: 8px;
             padding: 1rem;
             margin-top: 1rem;
         }
         .summary-label {
-            font-size: 0.75rem;
-            color: #00d4ff;
-            font-weight: 600;
+            font-size: 0.85rem;
+            color: #006496;
+            font-weight: 700;
             margin-bottom: 0.5rem;
         }
         .summary-text {
-            color: #fff;
-            line-height: 1.6;
+            color: #1a1a1a;
+            line-height: 1.7;
+            font-size: 1rem;
         }
         .summary-note {
-            font-size: 0.7rem;
-            color: #666;
+            font-size: 0.75rem;
+            color: #555;
             margin-top: 0.75rem;
             font-style: italic;
         }
